- Fix ``cuboid`` ``df::coord`` constructors not initializing properly
- ``Units::isVisible``: account for units in cages
- ``Units::isHidingCurse``: don't check ``hunt_target``, which is obsolete
- ``Units::getReadableName``: correct display of ghost+curse names w/r/t each other and unit prof, use ``curse.name`` instead of iterating syndrome name effects
- `autodump`: allow dumping on mid-air hatches and floor bars/grates.

## Misc Improvements
- `tweak`: improve performance of ``adamantine-cloth-wear`` tweak
- `gui/pathable`: give edge tiles where wagons can enter the map a special highlight to make them more identifiable. this is especially useful when the game decides that only a portion of the map edge is usable by wagons.
- ``setAreaAquifer``, ``removeAreaAquifer``: make use of cuboid iters to simplify code
- ``Units::isNaked``: now only checks equipped items (including rings, for now). Setting bool ``no_items`` to true checks empty inventory like before.
- ``Units::isUndead``: bool ``include_vamps`` renamed to ``hiding_curse``. Fn now checks that instead of bloodsucker syndrome.
- ``Units::isDanger``: added bool ``hiding_curse``, passed to ``isUndead`` to avoid spoilers
- ``Units::getRaceChildName``, ``getRaceChildNameById``, ``getRaceBabyName``, ``getRaceBabyNameById``: bool ``plural`` to get plural form
- ``Units::getProfessionName``: bool ``land_title`` to append "of Sitename" where applicable, use Prisoner/Slave and noble spouse titles (controlled by ``ignore_noble``)
- `plant`: detect trees via branches/leaves for cuboid selection
- ``Items``: module no longer dependent on MapCache. No longer need to pass MapCache parameter to ``moveToGround``, ``moveToContainer``, ``moveToBuilding``, ``moveToInventory``, ``makeProjectile``, or ``Items::remove``

## Documentation
- ``Units.h``: more comments on what each fn does
- Improve ``Units`` module Lua API docs, including some fns that were completely unlisted

## API