@@ -10,12 +10,11 @@ autodump
 
 This tool can instantly move all unforbidden items marked for dumping to the
 tile under the keyboard cursor. After moving the items, the dump flag is unset
-and the forbid flag is set, just as if it had been dumped normally. Be aware
-that dwarves that are en route to pick up the item for dumping may still come
-and move the item to your dump zone.
+and the forbid flag is set, just as if it had been dumped normally.
 
-The keyboard cursor must be placed on a floor tile so the items can be dumped
-there.
+The keyboard cursor can be placed on a floor tile or in the air. If in air
+the items will be converted into projectiles and fall. Items cannot be dumped
+inside of walls or fortifications.
 
 Usage
 -----
